@@ -11,6 +11,8 @@ Changes in @NEW@:
     * Shared library RPATH entries with a double leading slash (//)
       no longer cause paths to be recorded in soname dependencies
       in certain circumstances. (CNY-3425)
+    * Output text for the conary update command has been changed to more
+      clearly describe dependency resolution problems (CNY-3154)
 
   o Internal Changes:
     * Combined TroveCache and TroveCacheWrapper objects in build code
